@@ -2815,8 +2815,8 @@ public class Roi extends Object implements Cloneable, java.io.Serializable, Iter
 	/** Returns a hashcode for this Roi that typically changes
 		if it is moved, even though it is still the same object. */
 	public int getHashCode() {
-		return hashCode() ^ (new Double(getXBase()).hashCode()) ^
-			Integer.rotateRight(new Double(getYBase()).hashCode(),16);
+		return hashCode() ^ (Double.valueOf(getXBase()).hashCode()) ^
+			Integer.rotateRight(Double.valueOf(getYBase()).hashCode(),16);
 	}
 
 	public void setFlattenScale(double scale) {
